--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "@mui/x-date-pickers": "^8.4.0",
-    "@reduxjs/toolkit": "^2.8.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.3",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.5",
