--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@mui/x-date-pickers": "^8.4.0",
     "@types/react-router-dom": "^5.3.3",
     "dayjs": "^1.11.13",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "redux-thunk": "^3.1.0"
   }
 }
